project/base.core/src/main/java/eapli/base/grammar/antlr/validateform/ValidateFormParser.java
// Generated from D:/Escola/Uni/_Year-02/LAPR4/ProjetoIntegrador/project/base.core/src/main/java/eapli/base/grammar\ValidateForm.g4 by ANTLR 4.9.1
package eapli.base.grammar.antlr.validateform;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ValidateFormParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VALIDATE_FORM=1, MANDATORY_LABEL=2, REGEX_LABEL=3, ASSERT_LABEL=4, GET_ATTRIBUTE_LABEL=5, 
		DATE_COMPARE_LABEL=6, HELPDESK=7, IF_LABEL=8, ELSE=9, NUM=10, LOWERCASE=11, 
		UPPERCASE=12, PLUS=13, HYPHEN=14, TIMES=15, BLOCK_START=16, BLOCK_END=17, 
		STMT_START=18, STMT_END=19, AT=20, DOT=21, EQUAL=22, PERC=23, DOLLAR=24, 
		FOWARD_SLASH=25, COMP_EQUAL=26, DIFF=27, BIGGER=28, LESSER=29, BE=30, 
		LE=31, AND=32, OR=33, COLON=34, COMMA=35, HASHTAG=36, UNDERSCORE=37, PARENTHESIS_OPEN=38, 
		PARENTHESIS_CLOSE=39, QUOTATION_MARKS=40, END=41, WS=42;
	public static final int
		RULE_start = 0, RULE_statements = 1, RULE_header = 2, RULE_type = 3, RULE_statement = 4, 
		RULE_mandatory = 5, RULE_regex = 6, RULE_assert_func = 7, RULE_get_attribute = 8, 
		RULE_date_comp = 9, RULE_nums = 10, RULE_if_func = 11, RULE_bool = 12, 
		RULE_conditions = 13, RULE_condition = 14, RULE_comp = 15, RULE_conjunction = 16, 
		RULE_assign = 17, RULE_variable = 18, RULE_op = 19, RULE_object = 20, 
		RULE_sign_td = 21, RULE_sign_pm = 22, RULE_num = 23, RULE_var_label = 24, 
		RULE_alphanumeric = 25, RULE_alpha = 26, RULE_string = 27, RULE_character = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "statements", "header", "type", "statement", "mandatory", "regex", 
			"assert_func", "get_attribute", "date_comp", "nums", "if_func", "bool", 
			"conditions", "condition", "comp", "conjunction", "assign", "variable", 
			"op", "object", "sign_td", "sign_pm", "num", "var_label", "alphanumeric", 
			"alpha", "string", "character"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'validateForm'", "'mandatory'", "'regex'", "'assert'", "'getAttribute'", 
			"'dateCompare'", "'helpdesk'", "'if'", "'else'", null, null, null, "'+'", 
			"'-'", "'*'", "'{'", "'}'", "'('", "')'", "'@'", "'.'", "'='", "'%'", 
			"'$'", "'/'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", 
			"':'", "','", "'#'", "'_'", "'['", "']'", "'\"'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VALIDATE_FORM", "MANDATORY_LABEL", "REGEX_LABEL", "ASSERT_LABEL", 
			"GET_ATTRIBUTE_LABEL", "DATE_COMPARE_LABEL", "HELPDESK", "IF_LABEL", 
			"ELSE", "NUM", "LOWERCASE", "UPPERCASE", "PLUS", "HYPHEN", "TIMES", "BLOCK_START", 
			"BLOCK_END", "STMT_START", "STMT_END", "AT", "DOT", "EQUAL", "PERC", 
			"DOLLAR", "FOWARD_SLASH", "COMP_EQUAL", "DIFF", "BIGGER", "LESSER", "BE", 
			"LE", "AND", "OR", "COLON", "COMMA", "HASHTAG", "UNDERSCORE", "PARENTHESIS_OPEN", 
			"PARENTHESIS_CLOSE", "QUOTATION_MARKS", "END", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ValidateForm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ValidateFormParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	 
		public StartContext() { }
		public void copyFrom(StartContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExecStartContext extends StartContext {
		public StatementsContext stmts;
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode BLOCK_START() { return getToken(ValidateFormParser.BLOCK_START, 0); }
		public TerminalNode BLOCK_END() { return getToken(ValidateFormParser.BLOCK_END, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public ExecStartContext(StartContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterExecStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitExecStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitExecStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			_localctx = new ExecStartContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			header();
			setState(59);
			type();
			setState(60);
			match(BLOCK_START);
			setState(61);
			((ExecStartContext)_localctx).stmts = statements();
			setState(62);
			match(BLOCK_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
	 
		public StatementsContext() { }
		public void copyFrom(StatementsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExecStatementsContext extends StatementsContext {
		public StatementContext stmt;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ExecStatementsContext(StatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterExecStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitExecStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitExecStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			_localctx = new ExecStatementsContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				((ExecStatementsContext)_localctx).stmt = statement();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DOLLAR || _la==HASHTAG );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
	 
		public HeaderContext() { }
		public void copyFrom(HeaderContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExecHeaderContext extends HeaderContext {
		public TerminalNode HASHTAG() { return getToken(ValidateFormParser.HASHTAG, 0); }
		public TerminalNode HELPDESK() { return getToken(ValidateFormParser.HELPDESK, 0); }
		public ExecHeaderContext(HeaderContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterExecHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitExecHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitExecHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header);
		try {
			_localctx = new ExecHeaderContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(HASHTAG);
			setState(70);
			match(HELPDESK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExecTypeContext extends TypeContext {
		public TerminalNode VALIDATE_FORM() { return getToken(ValidateFormParser.VALIDATE_FORM, 0); }
		public ExecTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterExecType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitExecType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitExecType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		try {
			_localctx = new ExecTypeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(VALIDATE_FORM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StmtAssertContext extends StatementContext {
		public Assert_funcContext stmt;
		public TerminalNode END() { return getToken(ValidateFormParser.END, 0); }
		public Assert_funcContext assert_func() {
			return getRuleContext(Assert_funcContext.class,0);
		}
		public StmtAssertContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterStmtAssert(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitStmtAssert(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitStmtAssert(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtDateCompContext extends StatementContext {
		public Date_compContext stmt;
		public TerminalNode END() { return getToken(ValidateFormParser.END, 0); }
		public Date_compContext date_comp() {
			return getRuleContext(Date_compContext.class,0);
		}
		public StmtDateCompContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterStmtDateComp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitStmtDateComp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitStmtDateComp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtIfContext extends StatementContext {
		public If_funcContext stmt;
		public If_funcContext if_func() {
			return getRuleContext(If_funcContext.class,0);
		}
		public StmtIfContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterStmtIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitStmtIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitStmtIf(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtMandatoryContext extends StatementContext {
		public MandatoryContext stmt;
		public TerminalNode END() { return getToken(ValidateFormParser.END, 0); }
		public MandatoryContext mandatory() {
			return getRuleContext(MandatoryContext.class,0);
		}
		public StmtMandatoryContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterStmtMandatory(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitStmtMandatory(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitStmtMandatory(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtAttributeContext extends StatementContext {
		public Get_attributeContext stmt;
		public TerminalNode END() { return getToken(ValidateFormParser.END, 0); }
		public Get_attributeContext get_attribute() {
			return getRuleContext(Get_attributeContext.class,0);
		}
		public StmtAttributeContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterStmtAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitStmtAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitStmtAttribute(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtRegexContext extends StatementContext {
		public RegexContext stmt;
		public TerminalNode END() { return getToken(ValidateFormParser.END, 0); }
		public RegexContext regex() {
			return getRuleContext(RegexContext.class,0);
		}
		public StmtRegexContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterStmtRegex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitStmtRegex(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitStmtRegex(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtAssignContext extends StatementContext {
		public AssignContext stmt;
		public TerminalNode END() { return getToken(ValidateFormParser.END, 0); }
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public StmtAssignContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterStmtAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitStmtAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitStmtAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new StmtMandatoryContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				((StmtMandatoryContext)_localctx).stmt = mandatory();
				setState(75);
				match(END);
				}
				break;
			case 2:
				_localctx = new StmtRegexContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				((StmtRegexContext)_localctx).stmt = regex();
				setState(78);
				match(END);
				}
				break;
			case 3:
				_localctx = new StmtAssertContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				((StmtAssertContext)_localctx).stmt = assert_func();
				setState(81);
				match(END);
				}
				break;
			case 4:
				_localctx = new StmtAttributeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				((StmtAttributeContext)_localctx).stmt = get_attribute();
				setState(84);
				match(END);
				}
				break;
			case 5:
				_localctx = new StmtDateCompContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				((StmtDateCompContext)_localctx).stmt = date_comp();
				setState(87);
				match(END);
				}
				break;
			case 6:
				_localctx = new StmtIfContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(89);
				((StmtIfContext)_localctx).stmt = if_func();
				}
				break;
			case 7:
				_localctx = new StmtAssignContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(90);
				((StmtAssignContext)_localctx).stmt = assign();
				setState(91);
				match(END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MandatoryContext extends ParserRuleContext {
		public MandatoryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mandatory; }
	 
		public MandatoryContext() { }
		public void copyFrom(MandatoryContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExecMandatoryContext extends MandatoryContext {
		public NumsContext agr;
		public TerminalNode HASHTAG() { return getToken(ValidateFormParser.HASHTAG, 0); }
		public TerminalNode MANDATORY_LABEL() { return getToken(ValidateFormParser.MANDATORY_LABEL, 0); }
		public TerminalNode STMT_START() { return getToken(ValidateFormParser.STMT_START, 0); }
		public TerminalNode STMT_END() { return getToken(ValidateFormParser.STMT_END, 0); }
		public NumsContext nums() {
			return getRuleContext(NumsContext.class,0);
		}
		public ExecMandatoryContext(MandatoryContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterExecMandatory(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitExecMandatory(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitExecMandatory(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MandatoryContext mandatory() throws RecognitionException {
		MandatoryContext _localctx = new MandatoryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mandatory);
		try {
			_localctx = new ExecMandatoryContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(HASHTAG);
			setState(96);
			match(MANDATORY_LABEL);
			setState(97);
			match(STMT_START);
			setState(98);
			((ExecMandatoryContext)_localctx).agr = nums();
			setState(99);
			match(STMT_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegexContext extends ParserRuleContext {
		public RegexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regex; }
	 
		public RegexContext() { }
		public void copyFrom(RegexContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExecRegexContext extends RegexContext {
		public Token agr;
		public StringContext re;
		public TerminalNode HASHTAG() { return getToken(ValidateFormParser.HASHTAG, 0); }
		public TerminalNode REGEX_LABEL() { return getToken(ValidateFormParser.REGEX_LABEL, 0); }
		public TerminalNode STMT_START() { return getToken(ValidateFormParser.STMT_START, 0); }
		public TerminalNode COMMA() { return getToken(ValidateFormParser.COMMA, 0); }
		public TerminalNode STMT_END() { return getToken(ValidateFormParser.STMT_END, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public List<TerminalNode> NUM() { return getTokens(ValidateFormParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(ValidateFormParser.NUM, i);
		}
		public ExecRegexContext(RegexContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterExecRegex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitExecRegex(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitExecRegex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegexContext regex() throws RecognitionException {
		RegexContext _localctx = new RegexContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_regex);
		int _la;
		try {
			_localctx = new ExecRegexContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(HASHTAG);
			setState(102);
			match(REGEX_LABEL);
			setState(103);
			match(STMT_START);
			setState(105); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(104);
				((ExecRegexContext)_localctx).agr = match(NUM);
				}
				}
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NUM );
			setState(109);
			match(COMMA);
			setState(110);
			((ExecRegexContext)_localctx).re = string();
			setState(111);
			match(STMT_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assert_funcContext extends ParserRuleContext {
		public Assert_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assert_func; }
	 
		public Assert_funcContext() { }
		public void copyFrom(Assert_funcContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExecAssertContext extends Assert_funcContext {
		public ConditionsContext cond;
		public TerminalNode HASHTAG() { return getToken(ValidateFormParser.HASHTAG, 0); }
		public TerminalNode ASSERT_LABEL() { return getToken(ValidateFormParser.ASSERT_LABEL, 0); }
		public TerminalNode STMT_START() { return getToken(ValidateFormParser.STMT_START, 0); }
		public TerminalNode STMT_END() { return getToken(ValidateFormParser.STMT_END, 0); }
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public ExecAssertContext(Assert_funcContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).enterExecAssert(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidateFormListener ) ((ValidateFormListener)listener).exitExecAssert(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidateFormVisitor ) return ((ValidateFormVisitor<? extends T>)visitor).visitExecAssert(this);
			else return visitor.visitChildren(this);
		}
	}
